--- a/faq.css
+++ b/faq.css
@@ -19,7 +19,7 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 1em;
     margin: 0 0;
-    background-image: url("White_Star.png");
+    background-image: url("white_star.png");
     background-repeat: no-repeat;
     background-position: 50% -40%;
     background-size: 1280px;
